force-app/main/default/objects/SBQQ__ProductAttributeSet__c/fields/SBQQ__AttributeSet__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AttributeSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Sets</label>
    <referenceTo>SBQQ__AttributeSet__c</referenceTo>
    <relationshipName>Attribute_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>