force-app/main/default/objects/SBQQ__ProductAttributeSet__c/fields/SBQQ__ProductOption__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipName>Product_Option</relationshipName>
    <type>Lookup</type>
</CustomField>