force-app/main/default/objects/SBQQ__ProductAttributeSet__c/fields/SBQQ__ProductOptionName__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProductOptionName__c</fullName>
    <formula>SBQQ__ProductOption__r.SBQQ__OptionalSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Option Name</label>
    <type>Text</type>
</CustomField>