force-app/main/default/objects/SBQQ__ProductAttributeSet__c/fields/SBQQ__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>